<resources>
    <!--Splash, Login, Sign Up-->
    <string name="logo">logo</string>
    <string name="app_name">Qeshta Expenses</string>
    <string name="save_your_money">Save Your Money</string>

    <!--Login, Sign Up, Profile-->
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="error">Email or Password is incorrect !</string>
    <string name="required">required</string>
    <string name="not_match">The password does not match</string>
    <string name="update_successfully">Update successfully</string>

    <!--Home-->
    <string name="menu">Menu</string>
    <string name="my_expenses">My Expenses</string>
    <string name="search">Search</string>
    <string name="no_expenses">No Expenses</string>
    <string name="add">Add</string>
    <string name="empty">Empty</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="delete_expense_successfully">Delete expense successfully</string>
    <string name="confirm_delete_expense">Are you sure to delete this expense ?</string>

    <!--Bottom Sheet Dialog, Row-->
    <string name="add_a_new_expense">Add a new Expense</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="save_expense">Save Expense</string>
    <string name="cancel">Cancel</string>
    <string name="place">Place</string>
    <string name="money">Money</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="display_settings">Display Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="theme">Theme</string>
    <string name="light_dark">Light / Dark</string>
    <string name="notifications">Notifications</string>
    <string name="remind_me">Remind me</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="privacy">Privacy</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notifications_on">Notifications On</string>
    <string name="notifications_off">Notifications Off</string>
    <string name="notifications_message">Don"'"t forget to add today"'"s expenses</string>

</resources>