<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/displayApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/display_settings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/languageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_language"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/language"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayApp" />

    <RadioGroup
        android:id="@+id/languageRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageTv">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/english" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/arabic"
            android:textSize="16sp" />

    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/themeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_theme"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/theme"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageRg" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/light_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeTv" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeSw" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notificationsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/notifications"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/remindTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_notifications"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/remind_me"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationsTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notificationsOnTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_notifications_on"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/on"
        app:layout_constraintEnd_toStartOf="@+id/notificationsOffTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remindTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notificationsOffTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_notifications_off"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/notificationsOnTv"
        app:layout_constraintTop_toBottomOf="@id/remindTv" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationsOffTv" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/privacyTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_privacy"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/privacy"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logoutTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/logout"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacyTv" />

</androidx.constraintlayout.widget.ConstraintLayout>